<package format="3">
  <name>perception_rs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
